[metadata]
name= humanbonestructure
url= https://ousttrue.github.io/humanbonestructure/
project_urls=
    source= https://github.com/ousttrue/humanbonestructure
description= human bone structure
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= bvh
include_package_data = True

[options]
packages=find:
package_dir=
    =src
install_requires =
  pydear>=1.11.3

[options.entry_points]
gui_scripts =
    bvhview = humanbonestructure.bvh.viewer:run

[options.package_data]
* = *.vs, *.fs
